--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ service/album
 service/src/__pycache__
 web/node_modules
 web/.next
+web/assets/
 web/package-lock.json
 mobile/.expo
 mobile/.expo-shared
