some weird shit

--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,11 +1,18 @@
 FROM python:3.10
 
+RUN apt-get update
+RUN apt-get install -y --no-install-recommends
+
 WORKDIR /app
 
-COPY . /app
+ENV PYTHONPATH /app
 
-RUN pip install -r requirements.txt
+COPY requirements.txt .
+RUN pip3 install --upgrade pip
+RUN pip3 install -r requirements.txt
+
+COPY . .
 
 EXPOSE 7777
 
-CMD ["python3", "./service/src/main.py"]
+CMD ["python3", "src/main.py"]
