--- a/service/requirements.txt
+++ b/service/requirements.txt
@@ -1,60 +1,9 @@
-absl-py==1.2.0
-brotlipy @ file:///Users/runner/miniforge3/conda-bld/brotlipy_1648854303569/work
-certifi==2022.9.24
-cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1656783163977/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1661170624537/work
-chex==0.1.5
-click==8.1.3
-colorama==0.4.5
-commonmark==0.9.1
-contourpy==1.0.5
-cryptography @ file:///Users/runner/miniforge3/conda-bld/cryptography_1657174084384/work
-cycler==0.11.0
-dm-tree==0.1.7
-etils==0.8.0
-filelock==3.8.0
 Flask==2.2.2
-Flask-Cors==3.0.10
-flax==0.6.0
-fonttools==4.37.2
-huggingface-hub==0.9.1
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1642433548627/work
-importlib-resources==5.9.0
-itsdangerous==2.1.2
-jax==0.3.17
-jaxlib==0.3.15
-Jinja2==3.1.2
-joblib==1.2.0
-kiwisolver==1.4.4
-MarkupSafe==2.1.1
-matplotlib==3.6.0
-msgpack==1.0.4
-nltk==3.7
-numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1662888984243/work
-opt-einsum==3.3.0
-optax==0.1.3
-packaging==21.3
-Pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1660385909106/work
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
-Pygments==2.13.0
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1643496850550/work
-pyparsing==3.0.9
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
-python-dateutil==2.8.2
-PyYAML==6.0
-regex==2022.9.13
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1661872987712/work
-rich==11.2.0
-scipy==1.9.1
-six==1.16.0
-tokenizers==0.12.1
-toolz==0.12.0
-torch==1.13.0.dev20220916
-torchaudio==0.13.0.dev20220916
-torchvision==0.14.0.dev20220916
-tqdm==4.64.1
-transformers==4.22.0
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1656706066251/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1658789158161/work
-Werkzeug==2.2.2
-zipp==3.8.1
+Flask_Cors==3.0.10
+ghapi==1.0.3
+nox==2022.8.7
+Pillow==9.3.0
+rich==12.6.0
+setuptools==63.4.1
+torch==1.12.1
+transformers==4.23.1
