Python3.11 support + Service Dockerfile cmake install

--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10
+FROM python:3.11
 
 RUN apt-get update
 RUN apt-get install -y --no-install-recommends
@@ -8,11 +8,15 @@ WORKDIR /app
 ENV PYTHONPATH /app
 
 COPY requirements.txt .
-RUN pip3 install --upgrade pip
-RUN pip3 install -r requirements.txt
+RUN pip install --trusted-host pypi.python.org --upgrade pip
+RUN pip install --trusted-host pypi.python.org -r requirements.txt
+RUN apt-get update && apt-get -y install cmake protobuf-compiler
 
 COPY . .
 
+RUN cd src &&  rm -rf build | echo "y" && mkdir build && cd build && cmake .. && make && cd .. && python3 trie.py
+
 EXPOSE 7777
 
-CMD ["python3", "src/main.py"]
+
+CMD ["python", "src/main.py"]
